# cardiovascular_diseases_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
Code/: idmcad_(images).py  idmpcd.py
