[project]
name = "cardiovascular-diseases-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0",
    "joblib>=1.3.2",
    "matplotlib>=3.8",
    "numpy>=1.26.4,<3",
    "pandas>=2.2.2",
    "pillow>=10.4",
    "protobuf>=4.23,<6",
    "scikit-learn>=1.4.2",
    "seaborn>=0.13",
    "streamlit>=1.32",
    "streamlit-option-menu>=0.3.6",
    "tensorflow==2.16.1",
]
